# rustcase

./: .gitignore  Cargo.toml  README.md  build.rs
algorithm/src/: lib.rs  sort.rs
axum-test/: Cargo.toml
axum-test/src/: main.rs
axum-test/src/api/: mod.rs  randnum.rs  usage.rs
axum-test/src/common/: config.rs  container.rs  error.rs  mod.rs  response.rs  result.rs
database/: Cargo.toml
database/src/: main.rs  mysql.rs
examples/: bfs.rs  chrono.rs  clap.rs  dotenv.rs  pin_project.rs  postgres.rs  prost_person.rs  reqwest.rs  s2n_quic_client.rs  s2n_quic_server.rs  select.rs  serde.rs
grpc/: Cargo.toml
grpc/src/pb/: mod.rs
httpie/: Cargo.toml
httpie/doc/: design.md
httpie/src/: command.rs  main.rs  request.rs
lists/src/: fifth.rs  first.rs  fourth.rs  second.rs  third.rs
minigrep/src/: lib.rs  main.rs
oop/src/: main.rs  state_pattern.rs
simkvs/: Cargo.toml
simkvs/examples/: client.rs  server.rs  server_with_codec.rs
simkvs/src/: error.rs
simkvs/src/pb/: mod.rs
simkvs/src/service/: command_service.rs  mod.rs
simkvs/src/storage/: memory.rs  mod.rs
simweb/: Cargo.toml
simweb/src/: lib.rs  main.rs
src/pb/: person.proto  person.rs
