[package]
name = "rustcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[dev-dependencies]
dotenv = "0.15.0"

postgres = "0.19.2"

pin-project = "1.0.10"

clap = { version = "3.0.13", features = ["derive"] }

serde = { version = "1",features = ["derive"] }
serde_json = "1.0"