[package]
name = "rustcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "axum-test",
    "lists",
    "grpc",
    "httpie",
    "database",
    "minigrep",
    "oop",
    "simweb",
]

[dependencies]
anyhow = "1"
bytes = "1"
prost = "0.9"

serde = { version = "1",features = ["derive"] }
serde_json = "1"

itertools = "0.8.0"
clap = { version = "4.0.29", features = ["derive"] }

# error-chain = "0.12.4"
# regex = "1.7.0"

[dev-dependencies]
dotenv = "0.15.0"

postgres = "0.19.2"

pin-project = "1.0.10"

chrono = "0.4"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

select = "0.5.0"
url = "2.2.2"

s2n-quic = { version = "1", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
s2n-quic-rustls = "0.1"
