[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.66"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mime = "0.3.16"
jsonxf = "1.1.1"
colored = "2.0.0"